applications/integration/storage/vector_data/qdrant-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qdrant-server
  labels:
    app: qdrant-server
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: qdrant-server 
  template:
    metadata:
      labels:
        app: qdrant-server 
    spec:
      containers:
        - name: qdrant-server
          image: qdrant/qdrant:v1.14.0
          imagePullPolicy: Always
          ports:
            - containerPort: 6333
          volumeMounts:
            - name: qdrant-storage
              mountPath: /qdrant/storage
      volumes:
        - name: qdrant-storage
          persistentVolumeClaim:
            claimName: qdrant-pvc
