applications/integration/storage/vector_data/qdrant-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qdrant-service
spec:
  selector: 
    app: qdrant-server
  ports:
    - port: 7201
      targetPort: 6333
