applications/integration/storage/vector_data/qdrant-ingress.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: qdrant-gateway
spec:
  selector:
    istio: istio-ingressgateway
  servers:
  - port:
      number: 80
      name: http-qdrant
      protocol: HTTP
    hosts:
    - 'qdrant.com'
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: qdrant-virtualservice
spec:
  hosts:
  - 'qdrant.com'
  gateways:
  - qdrant-gateway
  http:
    - route:
      - destination:
          host: qdrant-service.storage.svc.cluster.local
          port:
            number: 7201
